# rust-font-kit-demo

./: Cargo.toml
src/: lib.rs
tests/output/: font_kit_中.txt  font_kit_人.txt  font_kit_国.txt  ttf_parser_中.txt  ttf_parser_人.txt  ttf_parser_国.txt
